--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -20,4 +20,8 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
+
+  &-text {
+    color: transparentize($color-contrast-dark, .5);
+  }
 }
