--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -15,3 +15,5 @@ $btn-nav-tab-color: $color-contrast-dark;
 @import "./components/card.scss";
 @import "./components/buttons.scss";
 @import "./components/tabs.scss";
+@import "./components/navigation.scss";
+@import "./components/forms.scss";
